--- a/provisioning/roles/mysql-base/molecule/default/molecule.yml
+++ b/provisioning/roles/mysql-base/molecule/default/molecule.yml
@@ -6,8 +6,10 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: instance
+  - name: ubuntu
     image: "geerlingguy/docker-ubuntu1804-ansible:testing"
+    # instances:
+    #   - name: instance
 provisioner:
   name: ansible
   lint:
